[package]
name = "cnet"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
des = "0.8"
dialoguer = "0.12"
directories = "5.0"
hex = "0.4.3"
reqwest = {version = "0.13.3", features = ['json']}
serde = {version = "1.0.228", features = ['derive']}
serde_json = "1.0"
tokio = {version = "1.52.3",  features = ["full"] }
